# qupled-core

./: CHANGELOG.md  CONTENT_CLASSIFIER_IMPLEMENTATION.md  DELIVERABLES_PHASE_6.5.md  LEARNING_FLOW_DIAGRAM.txt  MULTI_PROCEDURE_USAGE.md  OPTION3_PROCEDURE_CACHING_PLAN.md  PHASE10_DESIGN.md  PHASE10_IMPLEMENTATION_REVIEW.md  PHASE10_TESTING.md  PHASE_6.5_SUMMARY.md  PLAN.md  PRIVACY.md  QUICK_REFERENCE_MULTI_PROCEDURE.md  README.md  TODO.md  TODOCORE.md  TUTOR_FLOW_UPDATE.md  cli.py  config.py  pyproject.toml  requirements.txt  test_latex_duplication.py  test_metacognitive_integration.py  test_solution_display.py  test_solution_display_direct.py  validate_multi_procedure.py
.examina/: training_cache.json
config/: __init__.py  provider_profiles.yaml
core/: __init__.py  active_learning.py  adaptive_teaching.py  analytics.py  analyzer.py  answer_evaluator.py  concept_explainer.py  concept_graph.py  concept_visualizer.py  detection_utils.py  exercise.py  exercise_scanner.py  exercise_splitter.py  features.py  fsrs_scheduler.py  llm_exercise_splitter.py  mastery_aggregator.py  merger.py  metacognitive.py  note_splitter.py  pdf.py  pdf_processor.py  post_processor.py  procedure_cache.py  progress_analyzer.py  proof_tutor.py  provider_router.py  quiz.py  quiz_engine.py  rate_limiter.py  review_engine.py  semantic_matcher.py  service.py  sm2.py  smart_splitter.py  solution_separator.py  study_strategies.py  task_types.py  test_vlm_candidates.py  tutor.py
docs/: CONCEPT_GRAPH.md  CONCEPT_GRAPH_EXAMPLES.md  CONCEPT_GRAPH_IMPLEMENTATION.md  service-interface.md
examples/: adaptive_examples.py
models/: llm_manager.py
scripts/: debug_analyzer.py  demo_generic_concept_graph.py  demo_sm2.py  inspect_db.py  inspect_exercises.py  inspect_theory_detail.py  inspect_theory_questions.py  test_async_analyzer.py  test_async_llm.py  test_async_quick.py  (+14 more)
(+32 files in other folders)
